# knio

./: .aliases  .bash  .gitconfig  .gitignore  .gitmodules  .inputrc  .screenrc  Makefile  install.bat
.vim/: vimrc
enorm/: .gitignore  Makefile  README.md  pyproject.toml
enorm/enorm/: __init__.py  version.py
enorm/test/: example.py  example.sql  example_data.sql
net/: Makefile  README.md  net.c  net.py  pyproject.toml  record.py  requirements.txt  tui.py
net/bwninja/: _version.py  net.c  net.py  tui.py  utils.py
net/exp/: web.py
rebugger/: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  test.py
rebugger/protos/perfetto/common/: android_log_constants_pb2.py  data_source_descriptor_pb2.py  observable_events_pb2.py  perf_events_pb2.py  sys_stats_counters_pb2.py  tracing_service_capabilities_pb2.py  tracing_service_state_pb2.py
rebugger/protos/perfetto/config/: interceptor_config_pb2.py  perfetto_config_pb2.py
rebugger/protos/perfetto/config/android/: android_game_intervention_list_config_pb2.py  surfaceflinger_transactions_config_pb2.py  windowmanager_config_pb2.py
rebugger/protos/perfetto/config/chrome/: chrome_config_pb2.py
rebugger/protos/perfetto/config/etw/: etw_config_pb2.py
rebugger/protos/perfetto/config/gpu/: vulkan_memory_config_pb2.py
rebugger/protos/perfetto/config/power/: android_power_config_pb2.py
rebugger/protos/perfetto/config/profiling/: heapprofd_config_pb2.py  java_hprof_config_pb2.py
rebugger/protos/perfetto/config/statsd/: atom_ids_pb2.py  statsd_tracing_config_pb2.py
rebugger/protos/perfetto/config/track_event/: track_event_config_pb2.py
rebugger/protos/perfetto/ipc/: consumer_port_pb2.py  wire_protocol_pb2.py
rebugger/protos/perfetto/metrics/: metrics_pb2.py  perfetto_merged_metrics_pb2.py
rebugger/protos/perfetto/metrics/android/: android_anomaly_metric_pb2.py  android_blocking_calls_unagg_pb2.py  android_sysui_notifications_blocking_calls_metric_pb2.py  anr_metric_pb2.py  app_process_starts_metric_pb2.py  batt_metric_pb2.py  binder_metric_pb2.py  camera_metric_pb2.py  codec_metrics_pb2.py  dvfs_metric_pb2.py  jank_cuj_metric_pb2.py  java_heap_class_stats_pb2.py  lmk_metric_pb2.py  lmk_reason_metric_pb2.py  mem_metric_pb2.py  mem_unagg_metric_pb2.py  multiuser_metric_pb2.py  rt_runtime_metric_pb2.py  surfaceflinger_pb2.py  sysui_slice_performance_statistical_data_pb2.py  task_names_pb2.py
rebugger/protos/perfetto/metrics/chrome/: all_chrome_metrics_pb2.py  args_class_names_pb2.py  dropped_frames_pb2.py  frame_times_pb2.py  histogram_summaries_pb2.py  slice_names_pb2.py  test_chrome_metric_pb2.py
rebugger/protos/perfetto/metrics/webview/: all_webview_metrics_pb2.py
rebugger/protos/perfetto/trace/: extension_descriptor_pb2.py  memory_graph_pb2.py  perfetto_trace_pb2.py  trace_packet_pb2.py  trace_pb2.py  trace_uuid_pb2.py
rebugger/protos/perfetto/trace/android/: android_log_pb2.py  android_system_property_pb2.py  android_track_event_pb2.py  inputmethodeditor_pb2.py  protolog_pb2.py
rebugger/protos/perfetto/trace/chrome/: chrome_trigger_pb2.py
rebugger/protos/perfetto/trace/etw/: etw_pb2.py
rebugger/protos/perfetto/trace/ftrace/: android_fs_pb2.py  block_pb2.py  cgroup_pb2.py  cros_ec_pb2.py  fence_pb2.py  fs_pb2.py  ftrace_event_bundle_pb2.py  ftrace_event_pb2.py  g2d_pb2.py  gpu_scheduler_pb2.py  ion_pb2.py  kmalloc_pb2.py  kmem_pb2.py  lwis_pb2.py  mali_pb2.py  mdss_pb2.py  net_pb2.py  samsung_pb2.py  sde_pb2.py  signal_pb2.py  skb_pb2.py  sync_pb2.py  test_bundle_wrapper_pb2.py  virtio_gpu_pb2.py
rebugger/protos/perfetto/trace/gpu/: gpu_counter_event_pb2.py  gpu_log_pb2.py
rebugger/protos/perfetto/trace/interned_data/: interned_data_pb2.py
rebugger/protos/perfetto/trace/perfetto/: perfetto_metatrace_pb2.py  tracing_service_event_pb2.py
rebugger/protos/perfetto/trace/power/: android_energy_estimation_breakdown_pb2.py  power_rails_pb2.py
rebugger/protos/perfetto/trace/ps/: process_tree_pb2.py
rebugger/protos/perfetto/trace/track_event/: chrome_active_processes_pb2.py  chrome_compositor_scheduler_state_pb2.py  chrome_content_settings_event_info_pb2.py  chrome_frame_reporter_pb2.py  chrome_message_pump_pb2.py  chrome_mojo_event_info_pb2.py  chrome_thread_descriptor_pb2.py  chrome_user_event_pb2.py  chrome_window_handle_event_info_pb2.py  counter_descriptor_pb2.py  log_message_pb2.py  process_descriptor_pb2.py  range_of_interest_pb2.py  source_location_pb2.py  task_execution_pb2.py  thread_descriptor_pb2.py
rebugger/protos/perfetto/trace/translation/: translation_table_pb2.py
rebugger/protos/perfetto/trace_processor/: metrics_impl_pb2.py
rebugger/rebugger/: __init__.py  _version.py  perfetto.py  rebugger.py
rebugger/rebugger/protos/perfetto/bigtrace/: orchestrator_pb2.py  worker_pb2.py
rebugger/rebugger/protos/perfetto/common/: android_energy_consumer_descriptor_pb2.py  builtin_clock_pb2.py  commit_data_request_pb2.py  descriptor_pb2.py  ftrace_descriptor_pb2.py  gpu_counter_descriptor_pb2.py  interceptor_descriptor_pb2.py  observable_events_pb2.py  protolog_common_pb2.py  trace_stats_pb2.py  tracing_service_state_pb2.py  track_event_descriptor_pb2.py
rebugger/rebugger/protos/perfetto/config/: data_source_config_pb2.py  perfetto_config_pb2.py  stress_test_config_pb2.py  test_config_pb2.py  trace_config_pb2.py
rebugger/rebugger/protos/perfetto/ipc/: consumer_port_pb2.py  producer_port_pb2.py  relay_port_pb2.py
whirl/: .travis.yml  Makefile  README.md  pyproject.toml
whirl/examples/: hello_domx.py  hello_tornado.py  kniodo.css  kniodo.js  kniodo.py  task_store.py
whirl/tests/: test_cookie.py  test_url.py  test_whirl.py
whirl/whirl/: __init__.py  cookie.py  domx.py  httpmessage.py  parsers.py  tornado_server.py  url.py
whirl/whirl/domx/: domx.js
(+408 files in other folders)
