[project]
name = "whirl"
dynamic = ["version"]
description = "A collection of tools for making websites in Python"
authors = [
  {name="Tom Flanagan", email="tom@zkpq.ca"}
]
readme = "README.md"

classifiers = [
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Browsers",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Internet :: WWW/HTTP :: Session",
  "Topic :: Internet :: WWW/HTTP :: WSGI",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Middleware",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Server",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/Knio/whirl"
Source = "https://github.com/Knio/whirl"


[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"whirl.domx" = ["*"]

[tool.setuptools.exclude-package-data]
"*" = [
  "__pycache__",
  "*.pyc"
]

[tool.setuptools.dynamic]
version = {attr = "whirl._version.__version__"}
